--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "classnames": "^2.3.2",
+    "intersection-observer": "^0.12.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
