--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: lts-alpine
+          node-version: lts
           cache: "pnpm"
       - name: Install Dependencies
         run: pnpm install --frozen-lockfile
