--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -22,6 +22,7 @@ jobs:
       - uses: pnpm/action-setup@v2
         name: Install pnpm
         with:
+          version: 7
           run_install: false
       - name: Get pnpm store directory
         shell: bash
