--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,10 +1,6 @@
 name: Pull Request
 
-on:
-  pull_request:
-  push:
-    branches:
-      - feature/add-ci
+on: [pull_request]
 
 jobs:
   build-beta:
