--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,53 +13,54 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Test some vars
+        run: "echo ${{ github.event }}"
+      # - name: Setup Node
+      #   uses: actions/setup-node@v3
+      #   with:
+      #     node-version: 18
 
-      - name: Setup Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
+      # - uses: pnpm/action-setup@v2
+      #   name: Install pnpm
+      #   with:
+      #     version: 7
+      #     run_install: false
 
-      - uses: pnpm/action-setup@v2
-        name: Install pnpm
-        with:
-          version: 7
-          run_install: false
+      # - name: Get pnpm store directory
+      #   id: pnpm-cache
+      #   shell: bash
+      #   run: |
+      #     echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
 
-      - name: Get pnpm store directory
-        id: pnpm-cache
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
+      # - uses: actions/cache@v3
+      #   name: Setup pnpm cache
+      #   with:
+      #     path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
+      #     key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-pnpm-store-
 
-      - uses: actions/cache@v3
-        name: Setup pnpm cache
-        with:
-          path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
+      # - name: Install Dependencies
+      #   run: pnpm install --frozen-lockfile
 
-      - name: Install Dependencies
-        run: pnpm install --frozen-lockfile
+      # - name: Build
+      #   run: pnpm build
 
-      - name: Build
-        run: pnpm build
+      # - name: Compress Build
+      #   uses: thedoctor0/zip-release@main
+      #   with:
+      #     type: "zip"
+      #     filename: "../training-modpack-ui.zip"
+      #     directory: build
 
-      - name: Compress Build
-        uses: thedoctor0/zip-release@main
-        with:
-          type: "zip"
-          filename: "../training-modpack-ui.zip"
-          directory: build
+      # - name: Upload Build Artifacts
+      #   uses: actions/upload-artifact@v3
+      #   with:
+      #     name: Training Modpack UI Release
+      #     path: build
 
-      - name: Upload Build Artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: Training Modpack UI Release
-          path: build
-
-      - name: Create Release
-        uses: softprops/action-gh-release@v0.1.14
-        with:
-          draft: true
-          files: training-modpack-ui.zip
+      # - name: Create Release
+      #   uses: softprops/action-gh-release@v0.1.14
+      #   with:
+      #     draft: true
+      #     files: training-modpack-ui.zip
