--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,5 +63,7 @@ jobs:
         with:
           draft: true
           files: training-modpack-ui.zip
+          body: |
+            ## Changes
           append_body: |
             - ${{ github.event.head_commit.message }} ([PR](${{ github.event.repository.pulls_url }})) @${{ github.event.head_commit.author.username }}
