--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,4 +66,6 @@ jobs:
           body: |
             ## Changes
           append_body: |
-            - ${{ github.event.head_commit.message }} ([PR](${{ github.event.repository.pulls_url }})) @${{ github.event.head_commit.author.username }}
+            - Testing
+
+          # ${{ github.event.head_commit.message }} ([PR](${{ github.event.repository.pulls_url }})) @${{ github.event.head_commit.author.username }}
